--- a/src/index.css
+++ b/src/index.css
@@ -117,12 +117,11 @@ All colors MUST be HSL.
 
 @layer base {
   * {
-    /* stylelint-disable-next-line at-rule-no-unknown */
-    @apply border-border;
+    border-color: hsl(var(--border));
   }
 
   body {
-    /* stylelint-disable-next-line at-rule-no-unknown */
-    @apply bg-background text-foreground;
+    background-color: hsl(var(--background));
+    color: hsl(var(--foreground));
   }
 }
